--- a/index.html
+++ b/index.html
@@ -2,29 +2,22 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="вёрстка, HTML, CSS, блог">
-    <meta name="description" content="Блог о процессе обучения веб-технологиям">
-    <title>Сайт начинающего верстальщика</title>
+    <meta name="description" content="Чековая лента">
+    <title>Чековая лента</title>
     <link rel="stylesheet" href="outlines.css">
   </head>
   <body>
     <header>
-      <h1>Сайт начинающего верстальщика</h1>
+      <h1>Сайт в разработке, скоро бдудет</h1>
     </header>
     <main>
-      <nav>
-        Навигация
-      </nav>
       <section>
-        <p>Всем привет! Добро пожаловать на мой первый сайт. Ещё недавно я понятия не имел, кто такой верстальщик, а теперь я нашёл интерактивные курсы по HTML и CSS и поставил перед собой цель — стать им. У меня даже появился инструктор — Кекс, который не позволит мне расслабиться и будет следить за моими успехами.</p>
-        <p>Моё первое задание — вести дневник и честно писать обо всех своих свершениях.</p>
+        <p>Всем привет! Скоро тут можно покупать будет чековую ленту и этикетку</p>
+        
       </section>
-      <section>
-        Раздел про навыки
-      </section>
-    </main>
+      </main>
     <footer>
-      Подвал сайта
+      Гамалов Владимир info@lecas.ru
     </footer>
   </body>
 </html>
