--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Сайт в разработке, скоро бдудет</h1>
+      <h1>Сайт в разработке, скоро всё будет</h1>
     </header>
     <main>
       <section>
