--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </header>
     <main>
       <section>
-        <p>Всем привет! Скоро тут можно покупать будет чековую ленту и этикетку</p>
+        <p>Всем привет! Скоро тут можно будет покупать чековую ленту и этикетку</p>
         
       </section>
       </main>
     <footer>
-      Гамалов Владимир info@lecas.ru
+      Гамалов Владимир <b><a>info@lecas.ru</a></b>
     </footer>
   </body>
 </html>
