--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </section>
       </main>
     <footer>
-      Гамалов Владимир <b><a>info@lecas.ru</a></b>
+      Гамалов Владимир <a><b>info@lecas.ru</b></a>
     </footer>
   </body>
 </html>
