--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </section>
       </main>
     <footer>
-      Гамалов Владимир <a href=info@lecas.ru><b>info@lecas.ru</b></a>
+      Гамалов Владимир <a href="mailto:info@lecas.ru"><b>info@lecas.ru</b></a>
     </footer>
   </body>
 </html>
