--- a/index.html
+++ b/index.html
@@ -2,22 +2,35 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Чековая лента">
-    <title>Чековая лента</title>
-    <link rel="stylesheet" href="outlines.css">
+    <meta name="keywords" content="Чековая лента, кассовая лента, термолента, термоэтикетка">
+    <meta name="description" content="Купить чековую ленту">
+    <title>Тут полупают чековую ленту</title>
+    <!link rel="stylesheet" href="outlines.css">
   </head>
   <body>
     <header>
-      <h1>Сайт в разработке, скоро всё будет</h1>
+	<img scr="logo.png" alt="Логотип">
+      <h1>Чековая лента тут</h1>
     </header>
     <main>
+	<nav>
+        <ul>
+		<li>О ленте</li>
+		<li>Брендированная лента</li>
+		<li>Цена</li>
+		<li>Контакты</li>
+	</ul>
+      </nav>
       <section>
-        <p>Всем привет! Скоро тут можно будет покупать чековую ленту и этикетку</p>
-        
+        <p>Всем привет! Добро пожаловать на мой первый сайт. Ещё недавно я понятия не имел, кто такой верстальщик, а теперь я нашёл интерактивные курсы по HTML и CSS и поставил перед собой цель — стать им. У меня даже появился инструктор — Кекс, который не позволит мне расслабиться и будет следить за моими успехами.</p>
+        <p>Моё первое задание — вести дневник и честно писать обо всех своих свершениях.</p>
       </section>
-      </main>
+      <section>
+        Раздел про навыки
+      </section>
+    </main>
     <footer>
-      Гамалов Владимир <a href="mailto:info@lecas.ru"><b>info@lecas.ru</b></a>
+      Подвал сайта
     </footer>
   </body>
 </html>
