--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="Чековая лента, кассовая лента, термолента, термоэтикетка">
     <meta name="description" content="Купить чековую ленту">
     <title>Тут полупают чековую ленту</title>
-    <!link rel="stylesheet" href="outlines.css">
+    <link rel="stylesheet" href="outlines.css">
   </head>
   <body>
     <header>
