--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-	<img scr="logo.png" alt="Логотип">
+	<img src="logo.png" alt="Логотип">
       <h1>Чековая лента тут</h1>
     </header>
     <main>
