--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-	<img src="logo.png" alt="Логотип">
+	<img src="logo.png" alt="Логотип" width="20%">
       <h1>Чековая лента тут</h1>
     </header>
     <main>
@@ -22,15 +22,15 @@
 	</ul>
       </nav>
       <section>
-        <p>Всем привет! Добро пожаловать на мой первый сайт. Ещё недавно я понятия не имел, кто такой верстальщик, а теперь я нашёл интерактивные курсы по HTML и CSS и поставил перед собой цель — стать им. У меня даже появился инструктор — Кекс, который не позволит мне расслабиться и будет следить за моими успехами.</p>
-        <p>Моё первое задание — вести дневник и честно писать обо всех своих свершениях.</p>
+        <p>Всем привет! Скоро тут можно будет купить Чековую ленту и Этикетку.</p>
+
       </section>
       <section>
         Раздел про навыки
       </section>
     </main>
     <footer>
-      Подвал сайта
+      компания ЛЕКАС    info@lecas.ru
     </footer>
   </body>
 </html>
