--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Чековая лента, кассовая лента, термолента, термоэтикетка">
     <meta name="description" content="Купить чековую ленту">
-    <title>Тут полупают чековую ленту</title>
+    <title>Тут покупают чековую ленту</title>
     <link rel="stylesheet" href="outlines.css">
   </head>
   <body>
